--- a/src/portal/puffer/templates/puffer/data.html
+++ b/src/portal/puffer/templates/puffer/data.html
@@ -74,7 +74,7 @@
   </div>
 
   <script src="{% static 'puffer/dist/js/jquery-3.3.1.slim.min.js' %}"></script>
-  <script src="{% static 'puffer/dist/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'puffer/dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
