--- a/src/portal/puffer/templates/puffer/index.html
+++ b/src/portal/puffer/templates/puffer/index.html
@@ -84,7 +84,7 @@
   </footer>
 
   <script src="{% static 'puffer/dist/js/jquery-3.3.1.slim.min.js' %}"></script>
-  <script src="{% static 'puffer/dist/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'puffer/dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
