--- a/src/portal/puffer/templates/puffer/player.html
+++ b/src/portal/puffer/templates/puffer/player.html
@@ -123,7 +123,7 @@
   </div>
 
   <script src="{% static 'puffer/dist/js/jquery-3.3.1.slim.min.js' %}"></script>
-  <script src="{% static 'puffer/dist/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'puffer/dist/js/bootstrap.bundle.min.js' %}"></script>
 
   <script src="{% static 'puffer/js/player.js' %}"></script>
   {% if params_json %}
